# npo-profile-builder

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
.claude/skills/propublica-nonprofits/: SKILL.md
.github/workflows/: deploy.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 54afb9967965_slice_2_conversations.py  5a07a4f9b6b9_slice_3_chunk_embeddings_pgvector.py  6c26a154c284_slice_1_source_documents_chunks_profiles.py
backend/app/: config.py  db.py  main.py
backend/app/api/: chat.py  health.py  ingest.py  profile.py  router.py  search.py
backend/app/core/: errors.py  logging.py
backend/app/models/: __init__.py  base.py  conversation.py  profile.py
backend/app/schemas/: __init__.py  api.py  chat.py  profile.py  search.py
backend/app/services/: agent.py  chat.py  chunking.py  embeddings.py  ingestion.py  llm.py  pdf.py  profiles.py  propublica.py  search.py
backend/scripts/: import_propublica.py
backend/tests/: conftest.py  test_agent.py  test_ingestion.py  test_profile_schema.py  test_propublica.py  test_search.py  test_smoke.py
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BackendStatus.tsx  FieldRow.tsx  Markdown.tsx  StatusBadge.tsx
frontend/src/lib/: profileFields.ts
frontend/src/pages/: ChatPage.tsx  ProfileReviewPage.tsx  ProfilesPage.tsx  SearchPage.tsx  UploadPage.tsx
(+9 files in other folders)
